# diplom_test

./: CMakeLists.txt  README.md  index.html  server.py  yolo_vid.cpp
